--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ main button:hover {
     padding: 1rem;
   }
   .img_container img {
-    content: url("/images/image-product-mobile.jpg");
+    content: url("image-product-mobile.jpg");
     border-radius: 10px;
   }
 
